--- a/src/css/car.css
+++ b/src/css/car.css
@@ -442,7 +442,6 @@ li {
 .containerbg {
   width: 100%;
   min-width: 1200px;
-  background: #f5f5f5;
   overflow: hidden;
 }
 
@@ -454,234 +453,368 @@ li {
 
 .containerbg .container {
   width: 1200px;
-  margin: 10px auto;
-}
-
-.containerbg .container .title {
-  background: #fff;
-  font-size: 32px;
-  margin-bottom: 10px;
-  margin-top: 20px;
-  height: 70px;
-  line-height: 70px;
-  padding-left: 15px;
-}
-
-.containerbg .container .content {
-  width: 1200px;
   margin: 0 auto;
+  margin-top: 20px;
 }
 
-.containerbg .container .content .content_left {
-  width: 267px;
-}
-
-.containerbg .container .content .content_left .list {
-  background: #fff;
+.containerbg .container .car_title {
   margin-bottom: 10px;
-  padding: 0 10px;
+  height: 43px;
+  border: solid 1px #e8e8e8;
+  background: #f5f5f5;
+  color: #333;
+  line-height: 43px;
 }
 
-.containerbg .container .content .content_left .list .listItem {
-  height: 52px;
-  line-height: 52px;
-  font-size: 14px;
+.containerbg .container .car_title .title_01 {
+  width: 190px;
+}
+
+.containerbg .container .car_title .title_01 .allpro {
   cursor: pointer;
+  line-height: 43px;
 }
 
-.containerbg .container .content .content_left .list .listItem .lt_state {
-  font-size: 24px;
-  font-family: "宋体";
-}
-
-.containerbg .container .content .content_left .list .listItem_b {
-  display: none;
-  padding-bottom: 10px;
-  border-top: 1px solid #e8e8e8;
-}
-
-.containerbg .container .content .content_left .list .listItem_b .clear_chose {
-  text-align: right;
-  padding-top: 15px;
-}
-
-.containerbg .container .content .content_left .list .listItem_b .chose {
+.containerbg .container .car_title .title_01 .allpro input {
+  margin: 0 3px 0 30px;
+  border: none;
+  font-size: 12px;
+  color: #6c6c6c;
   padding-left: 5px;
 }
 
-.containerbg .container .content .content_left .list .listItem_b .chose ul li a {
-  display: block;
+.containerbg .container .car_title .title_02 {
+  width: 255px;
+}
+
+.containerbg .container .car_title .title_03 {
+  width: 175px;
+  text-align: center;
+}
+
+.containerbg .container .car_title .title_04 {
+  width: 215px;
+  text-align: center;
+}
+
+.containerbg .container .car_title .title_05 {
+  width: 185px;
+  text-align: center;
+}
+
+.containerbg .container .carList {
+  border: solid 1px #e8e8e8;
+  padding: 0 30px;
+  font-size: 14px;
+}
+
+.containerbg .container .carList .goodsList {
+  font-size: 14px;
+}
+
+.containerbg .container .carList .goodsList .tableList {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+.containerbg .container .carList .goodsList .tableList tr {
+  border-bottom: solid 1px #e8e8e8;
+}
+
+.containerbg .container .carList .goodsList .tableList tr td {
+  padding: 23px 0;
+}
+
+.containerbg .container .carList .goodsList .tableList .rel {
+  width: 415px;
   position: relative;
-  padding: 5px 0 5px 20px;
+}
+
+.containerbg .container .carList .goodsList .tableList .rel .goods_check {
+  position: absolute;
+  top: 66px;
+  left: 0;
+}
+
+.containerbg .container .carList .goodsList .tableList .rel .car_goods_pic {
+  width: 98px;
+  height: 93px;
+  text-align: center;
+  padding-top: 5px;
+  margin-left: 30px;
+}
+
+.containerbg .container .carList .goodsList .tableList .rel .car_goods_pic img {
+  width: 75px;
+  height: 90px;
+}
+
+.containerbg .container .carList .goodsList .tableList .rel .car_goods_details {
+  margin-left: 30px;
+  text-align: left;
+  margin-top: 25px;
+}
+
+.containerbg .container .carList .goodsList .tableList .rel .car_goods_details p {
+  height: 23px;
+  line-height: 23px;
+  width: 250px;
+}
+
+.containerbg .container .carList .goodsList .tableList .rel .car_goods_details .goods_name {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  outline: none;
 }
 
-.containerbg .container .content .content_left .list .listItem_b .chose ul li a .lstCheck, .containerbg .container .content .content_left .list .listItem_b .chose ul li a .lstLab {
+.containerbg .container .carList .goodsList .tableList .car_goods_price {
+  width: 175px;
+  text-align: center;
+}
+
+.containerbg .container .carList .goodsList .tableList .car_goods_num {
+  width: 215px;
+}
+
+.containerbg .container .carList .goodsList .tableList .car_goods_num div {
+  margin: 0 auto;
+  width: 102px;
+  overflow: hidden;
+  border: 1px solid #d9d9d9;
+}
+
+.containerbg .container .carList .goodsList .tableList .car_goods_num div a {
   display: block;
-  width: 14px;
-  height: 14px;
-  background: url(../img/listico.gif) no-repeat;
-  position: absolute;
-  left: 0;
-  top: 7px;
+  float: left;
+  width: 22px;
+  height: 22px;
+  color: #333;
+  text-align: center;
 }
 
-.containerbg .container .content .content_left .list .listItem_b .chose ul li a .lstLab {
-  background-position: 0 -14px;
+.containerbg .container .carList .goodsList .tableList .car_goods_num div .num_jian {
+  border-right: 1px solid #d9d9d9;
 }
 
-.containerbg .container .content .content_left .list .listItem_b .chose .priceChoose {
-  padding: 15px 0 10px 0;
+.containerbg .container .carList .goodsList .tableList .car_goods_num div .num_jia {
+  border-left: 1px solid #d9d9d9;
 }
 
-.containerbg .container .content .content_left .list .listItem_b .chose .priceChoose .priceStart {
-  margin-right: 5px;
+.containerbg .container .carList .goodsList .tableList .car_goods_num div input {
+  display: block;
+  border: none;
+  float: left;
+  width: 56px;
+  height: 22px;
+  color: #333;
+  text-align: center;
+  line-height: 22px;
 }
 
-.containerbg .container .content .content_left .list .listItem_b .chose .priceChoose .priceInt {
-  border: solid 1px #ddd;
-  width: 107px;
-  height: 30px;
-  outline: none;
-  vertical-align: middle;
+.containerbg .container .carList .goodsList .tableList .car_goods_total {
+  width: 185px;
+  text-align: center;
 }
 
-.containerbg .container .content .content_left .list .listItem_b .chose .priceChoose .priceEnd {
-  margin-left: 5px;
+.containerbg .container .carList .goodsList .tableList .car_goods_del {
+  width: 128px;
+  padding-left: 20px;
+  margin: 0 auto;
+  text-align: left;
+  line-height: 2;
 }
 
-.containerbg .container .content .content_left .list .listItem_b .chose .chose_color {
+.containerbg .container .car_bar {
+  margin-top: 10px;
+  background: #fcfcfc;
+  border: solid 1px #e8e8e8;
+}
+
+.containerbg .container .car_bar .car_delete_l {
+  margin-top: 10px;
+}
+
+.containerbg .container .car_bar .car_delete_l .allDelete {
+  margin-right: 30px;
+  line-height: 43px;
+}
+
+.containerbg .container .car_bar .car_delete_l .allDelete .allpro {
+  cursor: pointer;
+}
+
+.containerbg .container .car_bar .car_delete_l .allDelete .allpro input {
+  margin: 0 3px 0 30px;
+  border: none;
+  font-size: 12px;
+  color: #6c6c6c;
   padding-left: 5px;
 }
 
-.containerbg .container .content .content_left .list .listItem_b .chose .chose_color .color_list {
-  width: 50%;
+.containerbg .container .car_bar .car_delete_l .allDelete_msg {
+  line-height: 43px;
 }
 
-.containerbg .container .content .content_left .list .listItem_b .chose .pricebtn {
-  display: inline-block;
-  width: 100%;
-  height: 34px;
-  background: #333;
-  color: #fff;
-  text-align: center;
-  line-height: 34px;
-  vertical-align: middle;
+.containerbg .container .car_bar .car_delete_l .allDelete_msg a {
+  margin-right: 30px;
 }
 
-.containerbg .container .content .content_fixed {
-  position: fixed;
-  top: 0;
+.containerbg .container .car_bar .car_delete_r {
+  margin: 15px 30px 10px 0;
+  width: 335px;
+  border-bottom: solid 1px #ebebeb;
+  padding-bottom: 15px;
+  text-align: right;
 }
 
-.containerbg .container .content .content_right {
-  width: 923px;
-  position: relative;
+.containerbg .container .car_bar .car_delete_r .total_price {
+  color: red;
+  font-weight: bolder;
+  font-size: 18px;
 }
 
-.containerbg .container .content .content_right .rank {
-  height: 55px;
-  line-height: 55px;
-  background: #fff;
+.containerbg .container .car_bar .continue_buy {
+  padding: 30px 30px 50px 30px;
 }
 
-.containerbg .container .content .content_right .rank .proFilter {
-  margin-left: 25px;
-}
-
-.containerbg .container .content .content_right .rank .proFilter span {
-  font-weight: bold;
-}
-
-.containerbg .container .content .content_right .rank .proFilter a {
-  margin-left: 35px;
-  display: inline-block;
-  padding-right: 12px;
-  position: relative;
-}
-
-.containerbg .container .content .content_right .rank .proFilter a .proSort {
+.containerbg .container .car_bar .continue_buy .go_on_buy {
   display: block;
-  width: 10px;
-  height: 12px;
-  background: url(../img/crumbsIco.gif) no-repeat -62px 0;
+  width: 123px;
+  height: 46px;
+  font-size: 14px;
+  padding-left: 15px;
+  color: #fff;
+  border: solid 1px #ccc;
+  border-radius: 3px;
+  text-align: center;
+  line-height: 46px;
+  color: #666;
+  margin-top: 2px;
+  background: url(../img/goonbuy.gif) 25px 18px no-repeat;
+}
+
+.containerbg .container .car_bar .continue_buy .buying {
+  cursor: pointer;
+  width: 165px;
+  height: 50px;
+  background: #c43f40;
+  color: #fff;
+  border: none;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 3px;
+}
+
+.containerbg .container .like {
+  margin-top: 20px;
+  border: solid 1px #e8e8e8;
+}
+
+.containerbg .container .like .your_fav {
+  height: 70px;
+  line-height: 70px;
+  border-bottom: solid 1px #e8e8e8;
+  margin: 0 30px;
+}
+
+.containerbg .container .like .goods_like {
+  width: 1140px;
+  margin: 0 auto;
+}
+
+.containerbg .container .like .goods_container {
+  visibility: visible;
+  overflow: hidden;
+  position: relative;
+  z-index: 2;
+  left: 0px;
+  width: 1048px;
+  padding: 20px 40px;
+  margin: 0 auto;
+}
+
+.containerbg .container .like .goods_container .goods_prev {
+  width: 17px;
+  height: 350px;
+  position: absolute;
+  left: 0;
+  z-index: 3;
+  background: #fff;
+  cursor: pointer;
+}
+
+.containerbg .container .like .goods_container .goods_prev p {
+  width: 17px;
+  position: absolute;
+  height: 38px;
+  top: 100px;
+  background: url(../img/pre_btn.png) no-repeat;
+}
+
+.containerbg .container .like .goods_container .goods_next {
+  width: 17px;
+  height: 350px;
   position: absolute;
   right: 0;
-  top: 21px;
-}
-
-.containerbg .container .content .content_right .rank .page {
-  margin: 18px 20px 0 0;
-}
-
-.containerbg .container .content .content_right .rank .page span {
-  cursor: pointer;
-  float: left;
-  display: block;
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  line-height: 20px;
-  margin: 0 9px;
-}
-
-.containerbg .container .content .content_right .rank .page .page_active {
-  background: #333;
-  color: #fff;
-  border: solid 1px #333;
-  border-radius: 2px;
-}
-
-.containerbg .container .content .content_right .goodslist {
-  margin-top: 5px;
-  width: 928px;
-}
-
-.containerbg .container .content .content_right .goodslist ul li {
-  float: left;
-  width: 205px;
-  padding: 10px;
-  margin: 0 5px 5px 0;
-  border: solid 1px #fff;
+  z-index: 3;
   background: #fff;
-  transition-duration: .1s;
-  transition-timing-function: linear;
+  cursor: pointer;
+}
+
+.containerbg .container .like .goods_container .goods_next p {
+  width: 17px;
+  position: absolute;
+  height: 38px;
+  top: 100px;
+  background: url(../img/next_btn.png) no-repeat;
+}
+
+.containerbg .container .like .goods_container .like_list {
+  width: 100%;
   position: relative;
 }
 
-.containerbg .container .content .content_right .goodslist ul li .pic {
+.containerbg .container .like .goods_container .like_list ul {
+  overflow: hidden;
+  position: relative;
+  width: 6600px;
+}
+
+.containerbg .container .like .goods_container .like_list ul li {
+  width: 220px;
+  height: 350px;
+  margin: 0 24px;
+  text-align: center;
+}
+
+.containerbg .container .like .goods_container .like_list ul li .pic {
   display: block;
-  width: 207px;
-  height: 230px;
   text-align: center;
   padding-top: 10px;
   text-align: center;
 }
 
-.containerbg .container .content .content_right .goodslist ul li .pic img {
+.containerbg .container .like .goods_container .like_list ul li .pic img {
   display: block;
   width: 180px;
   height: 180px;
 }
 
-.containerbg .container .content .content_right .goodslist ul li .global {
+.containerbg .container .like .goods_container .like_list ul li .global {
   width: 48px;
   height: 24px;
   margin-right: 10px;
   text-align: left;
-  padding: 0 20px 15px 20px;
+  padding: 10px 20px;
 }
 
-.containerbg .container .content .content_right .goodslist ul li .global .g_buy {
+.containerbg .container .like .goods_container .like_list ul li .global .g_buy {
   width: 48px;
   height: 24px;
   background: url(../img/saleTip1.png) -1px -3px no-repeat;
 }
 
-.containerbg .container .content .content_right .goodslist ul li .goodsname a {
+.containerbg .container .like .goods_container .like_list ul li .goodsname a {
   display: block;
   height: 45px;
   padding: 0 20px 9px 20px;
@@ -695,16 +828,16 @@ li {
   color: #666;
 }
 
-.containerbg .container .content .content_right .goodslist ul li .goodsname a i {
+.containerbg .container .like .goods_container .like_list ul li .goodsname a i {
   font-style: normal;
 }
 
-.containerbg .container .content .content_right .goodslist ul li .goodsname a span {
+.containerbg .container .like .goods_container .like_list ul li .goodsname a span {
   font-weight: bold;
   color: #000;
 }
 
-.containerbg .container .content .content_right .goodslist ul li .price {
+.containerbg .container .like .goods_container .like_list ul li .price {
   height: 18px;
   line-height: 18px;
   padding: 1px 0;
@@ -714,42 +847,13 @@ li {
   color: #666;
 }
 
-.containerbg .container .content .content_right .goodslist ul li .goodsCar {
-  padding: 0 20px;
-}
-
-.containerbg .container .content .content_right .goodslist ul li .goodsCar .bigCar {
+.containerbg .container .like .goods_container .like_list ul li .bigCar {
+  width: 126px;
+  height: 33px;
+  line-height: 33px;
+  border: solid 1px #e8e8e8;
+  margin-left: 20px;
   cursor: pointer;
-  height: 18px;
-  line-height: 18px;
-  width: 50%;
-  border-radius: 10px;
-  color: #fff;
-  font-size: 12px;
-  text-align: center;
-  background: #c53f40;
-}
-
-.containerbg .container .content .content_right .page {
-  margin: 18px 20px 0 0;
-  float: right;
-}
-
-.containerbg .container .content .content_right .page span {
-  float: left;
-  display: block;
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  line-height: 20px;
-  margin: 0 9px;
-}
-
-.containerbg .container .content .content_right .page .page_active {
-  background: #333;
-  color: #fff;
-  border: solid 1px #333;
-  border-radius: 2px;
 }
 
 /* 底部样式 */
