--- a/src/sass/car.scss
+++ b/src/sass/car.scss
@@ -378,274 +378,357 @@ li{
 /* 内容样式 */
 .containerbg{
 	width:100%;
-	min-width:$wid;
-	// margin-top:20px;
-	background:#f5f5f5;
+	min-width:$wid;	
 	overflow:hidden;
 	.headerShadow{
 		background: url(../img/headerbg.png) 0 bottom repeat-x;
 		width: 100%;
 		height: 8px;
-
 		}
 	.container{
 		width:$wid;
-		margin:10px auto;
-		.title{
-		    background: #fff;
-		    font-size:32px;
+		margin:$mgauto;
+		margin-top:20px;
+		.car_title{
 		    margin-bottom: 10px;
-		    margin-top:20px;
-		    height:70px;
-		    line-height: 70px;
-		    padding-left: 15px;
+		    height: 43px;
+		    border: solid 1px #e8e8e8;
+		    background: #f5f5f5;
+		    color: #333;
+		    line-height: 43px;
+		    .title_01{
+	    	    width: 190px;
+	    	    .allpro{
+	    	    	cursor:pointer;
+	    	    	line-height: 43px;
+	    	    	input{
+	    	    		margin: 0 3px 0 30px;
+	    	    		border:none;
+    	    		    font-size: 12px;
+						color: #6c6c6c;
+						padding-left: 5px;
+	    	    	}
+	    	    }
+		    }
+		    .title_02{
+	    	    width: 255px;
+		    }
+		     .title_03{
+	    	    width: 175px;
+    			text-align: center;
+		    }
+		     .title_04{
+	    	    width: 215px;
+   				text-align: center;
+		    }
+		     .title_05{
+    	        width: 185px;
+   				 text-align: center;
+		    }
 		}
-		.content{
-			width:$wid;
-			margin:$mgauto;
-			.content_left{
-				width:267px;
-				.list{
-				    background: #fff;
-				    margin-bottom: 10px;
-				    padding: 0 10px;
-					.listItem{
-					    height: 52px;
-					    line-height: 52px;
-					    font-size: 14px;
-					    cursor: pointer;
-					    .lt_state{
-				    	    font-size: 24px;
-  							  font-family: "宋体";
-					    }
-					}
-					.listItem_b{
-						display:none;
-						padding-bottom: 10px;
-   						border-top:1px solid #e8e8e8;
-   						.clear_chose{
-   							text-align: right;
-    						padding-top: 15px;
+		.carList{
+		    border: solid 1px #e8e8e8;
+		    padding: 0 30px;
+		    font-size: 14px;
+		    .goodsList{
+			    
+			    font-size: 14px;
+			    .tableList{
+		    	    border-collapse: collapse;
+   					border-spacing: 0;
+			 	  	tr{border-bottom: solid 1px #e8e8e8;
+						td{padding:23px 0;}
+			 	  	}
+
+   					.rel{
+   						width:415px;
+   						position:relative;
+   						.goods_check{
+						    position: absolute;
+						    top: 66px;
+						    left: 0;
    						}
-   						.chose{
-						    padding-left: 5px;
-						    ul li a {
-						    	display: block;
-							    position: relative;
-							    padding: 5px 0 5px 20px;
-							    overflow: hidden;
-							    white-space: nowrap;
-							    text-overflow: ellipsis;
-							    outline: none;
-							    .lstCheck,.lstLab{
-						    	    display: block;
-								    width: 14px;
-								    height: 14px;
-								    background: url(../img/listico.gif) no-repeat;
-								    position: absolute;
-								    left: 0;
-								    top: 7px;
-							    }
-							    .lstLab{
-									background-position:0 -14px;
-							    }
+   						.car_goods_pic{
+						    width: 98px;
+						    height: 93px;
+						    text-align: center;
+						    padding-top: 5px;
+						    margin-left: 30px;
+						    img{
+						    	width:75px;
+						    	height:90px;
 						    }
-						    .priceChoose{
-					    	    padding: 15px 0 10px 0;
-					    	    .priceStart{
-				    	    	    margin-right: 5px;
-					    	    }
-					    	    .priceInt{
-				    	    	    border: solid 1px #ddd;
-								    width: 107px;
-								    height: 30px;
-								    outline:none;
-								    vertical-align: middle;
-					    	    }
-					    	     .priceEnd{
-				    	    	    margin-left: 5px;
-					    	    }
-						    }
-				    	    .chose_color{
-			    	    	    padding-left: 5px;
-			    	    	    .color_list{
-		    	    	    	    width: 50%;
-			    	    	    }
-				    	    }
-						    .pricebtn{
-					    	    display: inline-block;
-							    width: 100%;
-							    height: 34px;
-							    background: #333;
-							    color: #fff;
-							    text-align: center;
-							    line-height: 34px;
-							    vertical-align: middle;
-						    }
+   						}
+   						.car_goods_details{
+						    margin-left: 30px;
+   							text-align: left;
+   							margin-top:25px;
+   							p{
+   							 	height:23px;
+   							 	line-height: 23px;
+						 	    width: 250px;
+   							 }
+   							 .goods_name{
+   							 	overflow: hidden;
+   							 	white-space:nowrap;
+   							 	text-overflow:ellipsis;
+   							 }
    						}
    					}
-				}
-			}
-			.content_fixed{
-				position:fixed;
-				top:0;
-			}
-			.content_right{
-			    width: 923px;
-   				position: relative;
-   				.rank{
-				    height: 55px;
-				    line-height: 55px;
-				    background: #fff;
-				    .proFilter{
-				    	margin-left: 25px;
-				    	span{font-weight: bold;}
-				    	a{   
-					    	margin-left: 35px;
-						    display: inline-block;
-						    padding-right: 12px;
-						    position: relative;
-						    .proSort{
+					.car_goods_price{
+						width:175px;
+						text-align:center;
+					}
+					.car_goods_num{
+						width:215px;
+						div{
+							margin:$mgauto;
+						    width: 102px;
+						    overflow: hidden;
+						    border: 1px solid #d9d9d9;
+						    a{
 					    	    display: block;
-							    width: 10px;
-							    height: 12px;
-							    background: url(../img/crumbsIco.gif) no-repeat -62px 0;
-							    position: absolute;
-							    right: 0;
-							    top: 21px;
+							    float: left;
+							    width: 22px;
+							    height: 22px;
+							    color: #333;
+							    text-align: center;
+
+						    }
+						    .num_jian{
+						    	border-right:1px solid #d9d9d9;
+						    }
+						    .num_jia{
+						    	border-left:1px solid #d9d9d9;
+						    }
+						    input{
+					    	    display: block;
+					    	    border:none;
+							    float: left;
+							    width: 56px;
+							    height: 22px;
+							    color: #333;
+							    text-align: center;
+							    line-height: 22px;
 						    }
 						}
-				    }
-				    .page{
-			    	    margin: 18px 20px 0 0;
-			    	    span{
-			    	    	cursor:pointer;
-		    	    	    float: left;
-						    display: block;
-						    width: 20px;
-						    height: 20px;
-						    text-align: center;
-						    line-height: 20px;
-						    margin: 0 9px;
-			    	    }
+					} 
+					.car_goods_total{
+						width:185px;
+						text-align:center;
+						div{
 
-			    	    .page_active{
-						    background: #333;
-						    color: #fff;
-						    border: solid 1px #333;
-						    border-radius: 2px;
-			    	    }
-				    }
-   				}
-   				.goodslist{
-				    margin-top: 5px;
-    				width: 928px;
-    				ul li{
-    					float: left;
-					    width: 205px;
-					    padding: 10px;
-					    margin: 0 5px 5px 0;
-					    border: solid 1px #fff;
-					    background: #fff;
-					    transition-duration: .1s;
-					    transition-timing-function: linear;
-					    position: relative;
-					    .pic{
-						    display: block;
-						    width: 207px;
-						    height: 230px;
-						    text-align: center;
-						    padding-top: 10px;
-						    text-align:center;
-						    img{
-								display:block;
-								width:180px;
-								height:180px;
-							}
 						}
-						.global{
-						    width: 48px;
-						    height: 24px;
-						    margin-right: 10px;
-						    text-align: left;
-							padding: 0 20px 15px 20px;
-							.g_buy{
-								width: 48px;
-						   		height: 24px;
-	   							background: url(../img/saleTip1.png) -1px -3px no-repeat;
-							}
-						}	
-						.goodsname{
-							a{
-								display: block;
-								height: 45px;
-								padding: 0 20px 9px 20px;
-								line-height: 2;
-								text-align: left;
-								overflow: hidden;
-								white-space: nowrap;
-								-o-text-overflow: ellipsis;
-								text-overflow: ellipsis; 
-								text-decoration:none;
-								color:#666;
-								i{
-									font-style:normal;
-								}
-								span{
-									font-weight: bold;
-									color:#000;
-								}
-							}
-						}
-						.price{
-						    height: 18px;
-				    		line-height: 18px;
-				   			padding: 1px 0;
-				      	    height: 26px;
-				    		padding: 0 20px;
-				    		text-align:left;
-				    		color:#666;
-						}
-						.goodsCar{
-							
-							padding: 0 20px;
-							.bigCar{
-								cursor: pointer;
-								height:18px;
-								line-height:18px;
-								width:50%;
-								border-radius: 10px;
-								color:#fff;
-								font-size:12px;
-								text-align:center;
-								background: #c53f40;
-							}
-						}
-    				}
-   				}
-   				.page{
-			    	    margin: 18px 20px 0 0;
-			    	    float:right;
-			    	    span{
-		    	    	    float: left;
-						    display: block;
-						    width: 20px;
-						    height: 20px;
-						    text-align: center;
-						    line-height: 20px;
-						    margin: 0 9px;
-			    	    }
-			    	    .page_active{
-						    background: #333;
-						    color: #fff;
-						    border: solid 1px #333;
-						    border-radius: 2px;
-			    	    }
-				    }
-			}
+					}
+					.car_goods_del{
+					    width: 128px;
+					    padding-left:20px;
+					    margin: 0 auto;
+					    text-align: left;
+					    line-height: 2;
+					}
+			    }
+		    }
 		}
-	}
-	
+		.car_bar{
+		    margin-top: 10px;
+		    background: #fcfcfc;
+		    border: solid 1px #e8e8e8;
+		    .car_delete_l{
+		    	margin-top: 10px;
+		    	.allDelete{
+	    		    margin-right: 30px;
+	    	    	line-height: 43px;
+	    		    .allpro{
+    		    	 	cursor:pointer;
+		    	    	input{
+		    	    		margin: 0 3px 0 30px;
+		    	    		border:none;
+	    	    		    font-size: 12px;
+							color: #6c6c6c;
+							padding-left: 5px;
+		    	    	}
+		    	    }
+		    	}
+	    	    .allDelete_msg{
+					line-height: 43px;
+				    a{margin-right:30px;}
+	    	    }
+		    }
+		    .car_delete_r{
+	    	    margin: 15px 30px 10px 0;
+			    width: 335px;
+			    border-bottom: solid 1px #ebebeb;
+			    padding-bottom: 15px;
+			    text-align:right;
+			    .total_price{color:red;font-weight: bolder;font-size: 18px;}
+		    }
+		    .continue_buy{
+	    	    padding: 30px 30px 50px 30px;
+	    	    .go_on_buy{
+    	    	    display: block;
+				    width: 123px;
+				    height: 46px;
+				    font-size: 14px;
+				    padding-left: 15px;
+				    color: #fff;
+				    border: solid 1px #ccc;
+				    border-radius: 3px;
+				    text-align: center;
+				    line-height: 46px;
+				    color: #666;
+				    margin-top: 2px;
+				    background: url(../img/goonbuy.gif) 25px 18px no-repeat;
+	    	    }
+	    	    .buying{
+    	    	    cursor: pointer;
+    	    	    width: 165px;
+				    height: 50px;
+				    background: #c43f40;
+				    color: #fff;
+				    border: none;
+				    font-size: 16px;
+				    font-weight: bold;
+				    border-radius: 3px;
+	    	    }
+		    }
+		}
+		.like{
+			margin-top: 20px;
+   			border: solid 1px #e8e8e8;
+   			.your_fav{
+			    height: 70px;
+			    line-height: 70px;
+			    border-bottom: solid 1px #e8e8e8;
+			    margin: 0 30px;
+   			}
+   			.goods_like{
+   				width: 1140px;
+  				margin: 0 auto;
+   			}
+   			.goods_container{
+			    visibility: visible;
+			    overflow: hidden;
+			    position: relative;
+			    z-index: 2;
+			    left: 0px;
+			    width: 1048px;
+		        padding: 20px 40px;
+    			margin: 0 auto;
+    			.goods_prev{
+				    width: 17px;
+				    height: 350px;
+				    position: absolute;
+				    left:0;
+				    z-index: 3;
+				    background: #fff;
+				    cursor: pointer;
+				    p{
+			    	    width: 17px;
+					    position: absolute;
+					    height: 38px;
+					    top: 100px;
+					    background: url(../img/pre_btn.png) no-repeat;
+				    }
+    			}
+    			.goods_next{
+					width: 17px;
+				    height: 350px;
+				    position: absolute;
+				    right:0;
+				    z-index: 3;
+				    background: #fff;
+				    cursor: pointer;
+				    p{
+			    	    width: 17px;
+					    position: absolute;
+					    height: 38px;
+					    top: 100px;
+				        background: url(../img/next_btn.png) no-repeat;
+				    }
+    			}
+    			.like_list{
+    				width:100%;
+    				position:relative;
+    				ul{
+    					overflow: hidden;
+    					position:relative;
+    					width:6600px;
+    					li{
+						    width: 220px;
+  							height: 350px;
+  							margin: 0 24px;
+  							text-align: center;
+  							.pic{
+							    display: block;
+							    // width: 207px;
+							    // height: 200px;
+							    text-align: center;
+							    padding-top: 10px;
+							    text-align:center;
+							    img{
+									display:block;
+									width:180px;
+									height:180px;
+								}
+							}
+							.global{
+							    width: 48px;
+							    height: 24px;
+							    margin-right: 10px;
+							    text-align: left;
+								padding: 10px 20px ;
+								.g_buy{
+									width: 48px;
+							   		height: 24px;
+		   							background: url(../img/saleTip1.png) -1px -3px no-repeat;
+								}
+							}	
+							.goodsname{
+								a{
+									display: block;
+									height: 45px;
+									padding: 0 20px 9px 20px;
+									line-height: 2;
+									text-align: left;
+									overflow: hidden;
+									white-space: nowrap;
+									-o-text-overflow: ellipsis;
+									text-overflow: ellipsis; 
+									text-decoration:none;
+									color:#666;
+									i{
+										font-style:normal;
+									}
+									span{
+										font-weight: bold;
+										color:#000;
+									}
+								}
+							}
+							.price{
+							    height: 18px;
+					    		line-height: 18px;
+					   			padding: 1px 0;
+					      	    height: 26px;
+					    		padding: 0 20px;
+					    		text-align:left;
+					    		color:#666;
+							}
+							.bigCar{
+								width: 126px;
+							    height: 33px;
+							    line-height: 33px;
+							    border: solid 1px #e8e8e8;
+							    margin-left: 20px;
+							    cursor: pointer;
+							}
+    					}
+    				}
+    			}
+   			}
+		}
+	}	
 }
 
 /* 底部样式 */
